--- a/_includes/components/head.njk
+++ b/_includes/components/head.njk
@@ -4,7 +4,29 @@
   <title>{{ renderData.title or title or site.name }}</title>
   <meta name="description" content="{{ metaDescription or renderData.metaDescription or site.description }}">
   <link rel="stylesheet" href="/style.css?v={% version %}"/>
-  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>{{ site.emoji }}</text></svg>">
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="icon" type="image/png" href="/favicon.ico">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#047481">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#014451">
+  <meta name="description" content="<%= (!!locals.description) ? description : site.description %>" />
+  <meta property="og:title" content="Tidal PTC" />
+  <meta property="og:description" content="<%= (!!locals.description) ? description : site.description %>" />
+  <meta property="og:locale" content="<%= site.locale %>" />
+  <meta property="og:site_name" content="<%= site.site_name %>" />
+  <meta property="og:image" content="https://tidalptc.com/assets/images/share.png" />
+  <meta property="og:image:alt" content="Manage parent-teacher conferences with Tidal PTC" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:description" content="<%= (!!locals.description) ? description : site.description %>" />
+  <meta name="twitter:title" content="Tidal PTC" />
+  <meta name="twitter:site" content="https://tidalptc.com" />
+  <meta name="twitter:image" content="https://tidalptc.com/assets/images/share.png" />
+  <meta name="twitter:creator" content="@ArchboardLLC"/>
+  <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
 
   {% set js %}
     {% include "assets/js/inline.js" %}
