--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -1,7 +1,7 @@
 <!doctype html>
 <html {% if section %} data-current="{{ section }}"{% endif %} lang="en">
   {% include "components/head.njk" %}
-  <body>
+  <body class="font-sans">
     <div id="app" class="h-screen bg-white dark:bg-gray-900">
       {% include "components/header.njk" %}
       {% if site.navigationStyle == "vertical" %}
@@ -20,9 +20,9 @@
         <main id="main" class="dark:bg-gray-900 pt-16 sm:pt-18 md:pt-48">
       {% else %}
         <main id="main" class="dark:bg-gray-900 pt-16 sm:pt-18 md:pt-20 md:pl-64 lg:pl-72">
-      {% endif %}     
-        {{ layoutContent | safe }} 
-        {% include "components/footer.njk" %} 
+      {% endif %}
+        {{ layoutContent | safe }}
+        {% include "components/footer.njk" %}
         </main>
     </div>
   </body>
