--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -3,7 +3,10 @@
 @tailwind utilities;
 
 @layer base {
-  
+  html {
+    font-size: 16px;
+  }
+
   /* Set up some default image behavior for nicer images */
   img {
     @apply w-auto  shadow-md border-2 border-transparent !important
@@ -25,7 +28,7 @@
     scroll-margin-top: 3.5em;
   }
   .prose pre code {
-    @apply overflow-x-auto !important 
+    @apply overflow-x-auto !important
   }
   .prose .footer-nav a {
     @apply no-underline !important
@@ -113,13 +116,13 @@
     @apply shadow-md ml-auto mr-auto  p-2 !important
   }
   .adjust  p img:hover, .adjust img:hover {
-    @apply shadow-xl  
+    @apply shadow-xl
   }
   .adjust img.button {
     @apply w-auto  shadow-none !important
   }
   .text-align-center {
-    @apply flex justify-center; 
+    @apply flex justify-center;
   }
   .icon-spacer {
     width: "24px";
