Fix many things... so many things

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -1,7 +1,7 @@
 <!doctype html>
 <html {% if section %} data-current="{{ section }}"{% endif %} lang="en">
   {% include "components/head.njk" %}
-  <body class="font-sans">
+  <body class="font-sans text-gray-900 dark:text-gray-200">
     <div id="app" class="h-screen bg-white dark:bg-gray-900">
       {% include "components/header.njk" %}
       {% if site.navigationStyle == "vertical" %}
@@ -19,7 +19,7 @@
       {% if site.navigationStyle == 'horizontal' %}
         <main id="main" class="dark:bg-gray-900 pt-16 sm:pt-18 md:pt-48">
       {% else %}
-        <main id="main" class="dark:bg-gray-900 pt-16 sm:pt-18 md:pt-20 md:pl-64 lg:pl-72">
+        <main id="main" class="flex flex-col min-h-screen justify-between dark:bg-gray-900 pt-16 sm:pt-18 md:pt-20 md:pl-64 lg:pl-72">
       {% endif %}
         {{ layoutContent | safe }}
         {% include "components/footer.njk" %}
