--- a/_includes/components/footer.njk
+++ b/_includes/components/footer.njk
@@ -1,6 +1,6 @@
 <!-- This example requires Tailwind CSS v2.0+ -->
-<footer class="dark:bg-gray-900">
-  <div class="max-w-7xl mx-auto py-12 px-4 sm:px-6 md:flex md:items-center md:justify-between lg:px-8">
+<footer class="dark:bg-gray-900 px-6 md:px-6 lg:px-8 xl:px-12">
+  <div class="mx-auto py-8 border-t dark:border-gray-500 w-full max-w-5xl md:flex md:items-center md:justify-between">
     <div class="flex justify-center space-x-6 md:order-2">
 
       <a href="https://twitter.com/ArchboardLLC" class="text-gray-400 hover:text-gray-500">
@@ -17,7 +17,7 @@
         </svg>
       </a>
     </div>
-    <div class="mt-8 md:mt-0 md:order-1">
+    <div class="mt-4 md:mt-0 md:order-1">
       <p class="text-center text-sm text-gray-400">
         &copy; 2021 <a href="https://www.archboard.io" class="hover:underline">Archboard, LLC</a>. All rights reserved.
       </p>
