--- a/_includes/layouts/page.njk
+++ b/_includes/layouts/page.njk
@@ -3,77 +3,85 @@ layout: layouts/base.njk
 section: page
 ---
 
-<div>
-  {% if site.navigationStyle == "vertical" %}
-    {% if site.enableEditButton == true or site.enableDatestamp == true %}
-      <div class="flex mt-4 justify-end mr-1">
-        {% if site.enableDatestamp == true %}
-          <div class="inline-block w-auto text-xs text-gray-500 dark:text-gray-400 pt-1 pb-1 pl-3 mr-2 rounded ">Updated <time datetime="{{ page.date | machineDate }}">{{ page.date | readableDate }}</time></div>
-        {% endif %}
-        {% if site.enableEditButton == true %}
-          <div class="inline-block w-auto text-xs text-gray-500 dark:text-gray-400 pt-1 pr-4 pb-1 pl-3 hover:underline"><a target="_blank" rel="noopener" rel="noreferrer" href="{{ site.githubUrl }}/edit/{{ site.githubBranch }}/{{ page.inputPath }}">Edit</a></div>
-        {% endif %}
-      </div>
-    {% endif %}
-  {% endif %}
-
-  <div class="flex w-full justify-center">
-    <div class="mt-4 px-6 md:px-6 lg:px-8 xl:px-12 w-full max-w-5xl">
-      <div class="w-full{% if site.enableTOC and toc %} xl:pr-64{% endif %}">
-        <article class="prose sm:prose lg:prose-lg xl:prose-md dark:text-gray-200">
-          <h1 class="dark:text-gray-300 mb-6">{{ title }}</h1>
-
-          {% if site.navigationStyle == "horizontal" %}
-            {% if site.enableEditButton == true or site.enableDatestamp == true %}
-              <div class="flex mt-4 justify-end mr-1">
-              {% if site.enableDatestamp == true %}
-                <div class="inline-block w-auto text-xs text-gray-500 pt-1 pb-1 pl-3 mr-2 rounded ">Updated <time datetime="{{ page.date | machineDate }}">{{ page.date | readableDate }}</time></div>
-              {% endif %}
-              {% if site.enableEditButton == true %}
-                <div class="inline-block w-auto text-xs  text-gray-500 hover:bg-gray-200 pt-1 pr-4 pb-1 pl-3 rounded "><a class="text-gray-500 no-underline font-normal !important" target="_blank" href="{{ site.githubUrl }}/edit/{{ site.githubBranch }}/{{ page.inputPath }}">Edit</a></div>
-              {% endif %}
-              </div>
-            {% endif %}
-          {% endif %}
-
-          {{ layoutContent | safe }}
-        </article>
-      </div>
-
-      <div class="self-center adjust">
-
-        {% if site.enablePageNavigation == true %}
-          <ul class="pt-4 mb-8  ml-0 pl-0 flex flex-wrap flex-row-reverse justify-between mt-8 list-none">
-            {%- set nextPage = collections.menuItems | getNextCollectionItem(page) %}
-            <li class="ml-0 pl-0 flex items-center group">
-              {%- if nextPage %}
-                <a class="font-semibold transition text-gray-500 group-hover:text-gray-400 dark:text-gray-400 dark:group-hover:text-gray-300" href="{{ nextPage.url | url }}">{% if nextPage.data.eleventyNavigation.title %}{{  nextPage.data.eleventyNavigation.title }}{% else %}{{  nextPage.data.eleventyNavigation.key }}{% endif %}</a> <svg height="24" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="inline ml-1 flex-shrink-0"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path></svg>
-              {% else %}
-                &nbsp;
-              {% endif %}
-            </li>
-            {%- set previousPage = collections.menuItems | getPreviousCollectionItem(page) %}
-            {%- if previousPage %}
-              <li class="ml-0 pl-0 flex items-center group">
-                <svg height="24" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="transform rotate-180 inline mr-1 flex-shrink-0"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path></svg>
-                <a class="font-semibold transition text-gray-500 group-hover:text-gray-400 dark:text-gray-400 dark:group-hover:text-gray-300" href="{{ previousPage.url | url }}">
-                  {% if previousPage.data.eleventyNavigation.title %}{{  previousPage.data.eleventyNavigation.title }}{% else %}{{  previousPage.data.eleventyNavigation.key }}{% endif %}
-                </a>
-              </li>
-            {% endif %}
-          </ul>
-        {% endif %}
-      </div>
-
-      {% if site.enableTOC and toc %}
-        <div class="text-gray-500 font-semibold hidden xl:block sidebar sticky right-0 mt-12 -ml-56 w-56 h-full top-48">
-          <small>ON THIS PAGE</small><br />
-          <aside class="font-normal">
-            {{ content | toc | safe }}
-          </aside>
+{% if site.navigationStyle == "vertical" %}
+  {% if site.enableEditButton == true or site.enableDatestamp == true %}
+    <div class="flex mt-4 justify-end mr-1">
+      {% if site.enableDatestamp == true %}
+        <div class="inline-block w-auto text-xs text-gray-500 dark:text-gray-400 pt-1 pb-1 pl-3 mr-2 rounded">
+          Updated <time datetime="{{ page.date | machineDate }}">{{ page.date | readableDate }}</time>
         </div>
       {% endif %}
-      </div>
+      {% if site.enableEditButton == true %}
+        <div class="inline-block w-auto text-xs text-gray-500 dark:text-gray-400 pt-1 pr-4 pb-1 pl-3 hover:underline">
+          <a target="_blank" rel="noopener" rel="noreferrer" href="{{ site.githubUrl }}/edit/{{ site.githubBranch }}/{{ page.inputPath }}">
+            Edit
+          </a>
+        </div>
+      {% endif %}
     </div>
+  {% endif %}
+{% endif %}
+
+<div class="flex w-full justify-center">
+  <div class="mt-4 px-6 md:px-6 lg:px-8 xl:px-12 w-full max-w-5xl">
+    <div class="w-full{% if site.enableTOC and toc %} xl:pr-64{% endif %}">
+      <article class="prose sm:prose lg:prose-lg xl:prose-md dark:text-gray-200">
+        <h1 class="dark:text-gray-300 mb-6">{{ title }}</h1>
+
+        {% if site.navigationStyle == "horizontal" %}
+          {% if site.enableEditButton == true or site.enableDatestamp == true %}
+            <div class="flex mt-4 justify-end mr-1">
+            {% if site.enableDatestamp == true %}
+              <div class="inline-block w-auto text-xs text-gray-500 pt-1 pb-1 pl-3 mr-2 rounded ">
+                Updated <time datetime="{{ page.date | machineDate }}">{{ page.date | readableDate }}</time>
+              </div>
+            {% endif %}
+            {% if site.enableEditButton == true %}
+              <div class="inline-block w-auto text-xs text-gray-500 hover:bg-gray-200 pt-1 pr-4 pb-1 pl-3 rounded ">
+                <a class="text-gray-500 no-underline font-normal !important" target="_blank" href="{{ site.githubUrl }}/edit/{{ site.githubBranch }}/{{ page.inputPath }}">
+                  Edit
+                </a>
+              </div>
+            {% endif %}
+            </div>
+          {% endif %}
+        {% endif %}
+
+        {{ layoutContent | safe }}
+      </article>
+    </div>
+
+    <div class="self-center adjust">
+      {% if site.enablePageNavigation == true %}
+        <ul class="pt-4 mb-8  ml-0 pl-0 flex flex-wrap flex-row-reverse justify-between mt-8 list-none">
+          {%- set nextPage = collections.menuItems | getNextCollectionItem(page) %}
+          <li class="ml-0 pl-0 flex items-center group">
+            {%- if nextPage %}
+              <a class="font-semibold transition text-gray-500 group-hover:text-gray-400 dark:text-gray-400 dark:group-hover:text-gray-300" href="{{ nextPage.url | url }}">{% if nextPage.data.eleventyNavigation.title %}{{  nextPage.data.eleventyNavigation.title }}{% else %}{{  nextPage.data.eleventyNavigation.key }}{% endif %}</a> <svg height="24" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="inline ml-1 flex-shrink-0"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path></svg>
+            {% else %}
+              &nbsp;
+            {% endif %}
+          </li>
+          {%- set previousPage = collections.menuItems | getPreviousCollectionItem(page) %}
+          {%- if previousPage %}
+            <li class="ml-0 pl-0 flex items-center group">
+              <svg height="24" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="transform rotate-180 inline mr-1 flex-shrink-0"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path></svg>
+              <a class="font-semibold transition text-gray-500 group-hover:text-gray-400 dark:text-gray-400 dark:group-hover:text-gray-300" href="{{ previousPage.url | url }}">
+                {% if previousPage.data.eleventyNavigation.title %}{{  previousPage.data.eleventyNavigation.title }}{% else %}{{  previousPage.data.eleventyNavigation.key }}{% endif %}
+              </a>
+            </li>
+          {% endif %}
+        </ul>
+      {% endif %}
+    </div>
+
+    {% if site.enableTOC and toc %}
+      <div class="text-gray-500 font-semibold hidden xl:block sidebar sticky right-0 mt-12 -ml-56 w-56 h-full top-48">
+        <small>ON THIS PAGE</small><br />
+        <aside class="font-normal">
+          {{ content | toc | safe }}
+        </aside>
+      </div>
+    {% endif %}
   </div>
 </div>
