--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -7,6 +7,10 @@
     font-size: 16px;
   }
 
+  .dark .prose code {
+    @apply text-white;
+  }
+
   /* Set up some default image behavior for nicer images */
   img {
     @apply w-auto  shadow-md border-2 border-transparent !important
@@ -112,21 +116,7 @@
   }
 
 /* Utilities and misc */
-  .adjust  p img, .adjust img, .adjust p iframe, .adjust iframe, .twitter-tweet {
-    @apply shadow-md ml-auto mr-auto  p-2 !important
-  }
-  .adjust  p img:hover, .adjust img:hover {
-    @apply shadow-xl
-  }
-  .adjust img.button {
-    @apply w-auto  shadow-none !important
-  }
-  .text-align-center {
-    @apply flex justify-center;
-  }
-  .icon-spacer {
-    width: "24px";
-  }
+
   input {
    @apply dark:text-gray-400
   }
