--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -91,10 +91,10 @@
    @apply ml-6 text-gray-500;
   }
   nav ul li a {
-    @apply mb-1 pt-2 pr-4 pb-1 pl-2 w-full block text-gray-500 dark:text-gray-300;
+    @apply mb-1 pt-2 pr-4 pb-1 pl-2 w-full block transition text-gray-500 dark:text-gray-300;
   }
   nav ul li a:hover {
-    @apply text-gray-900 dark:text-gray-400;
+    @apply text-gray-900 dark:text-gray-100;
   }
   nav ul li a.active {
     @apply font-semibold;
