--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -55,6 +55,9 @@
   .callout {
     @apply px-8 py-4 mb-4 rounded-lg bg-yellow-50;
   }
+  .prose .callout p {
+    @apply my-0;
+  }
   .callout, .callout strong, .callout em {
     @apply dark:bg-gray-400 dark:text-gray-900;
   }
