--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -7,6 +7,10 @@
     font-size: 16px;
   }
 
+  .text-align-center {
+    text-align: center !important;
+  }
+
   .dark .prose code {
     @apply text-white;
   }
