--- a/_includes/components/head.njk
+++ b/_includes/components/head.njk
@@ -30,7 +30,7 @@
 
   {% set js %}
     {% include "assets/js/inline.js" %}
-    {% include "assets/js/search.js" %}
+    {# {% include "assets/js/search.js" %} #}
   {% endset %}
   {% set darkmode %}
     {% include "assets/js/darkmode.js" %}
@@ -38,11 +38,6 @@
 
   <script>{{ darkmode | jsmin | safe }}</script>
   <script defer>{{ js | jsmin | safe }}</script>
-
- {% if site.enableNetlifyCMS == 1 %}
-  <link rel="dns-prefetch" href="https://identity.netlify.com">
-  <script async src="https://identity.netlify.com/v1/netlify-identity-widget.js" defer></script>
- {% endif %}
 
   {% if site.enableSearch == 1 %}
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/elasticlunr/0.9.6/elasticlunr.min.js" defer></script>
